@@ -11,6 +11,8 @@
  	* Fix USB suspend suggestion to take semi blacklisted stuff into
 	  account
 	* Add support for Intel's 4965 wireless power saving mode
+	* On new enough cpus (and kernel 2.6.25), report which C-states the
+	  cpu and bios report/support.
 
 1.9 --
 	* add support for mac80211 based wireless power saving
